--- a/ESP32_WEB_DASHBOARD/WEB/public/index.html
+++ b/ESP32_WEB_DASHBOARD/WEB/public/index.html
@@ -51,7 +51,7 @@ const firebaseConfig = {
 
   <!--AUTHENTICATION BAR (USER DETAILS/LOGOUT BUTTON)-->
   <div id="authentication-bar" style="display: none;">
-    <p><span id="authentication-status">Usuario Logged</span>
+    <p><span id="authentication-status">User Logged</span>
        <span id="user-details">USEREMAIL</span>
        <a href="/" id="logout-link">(logout)</a>
     </p>
